--- a/pages/pov.html
+++ b/pages/pov.html
@@ -4,33 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Power Gym - Disciplinas</title>
+    <title>Power Gym - Rutinas</title>
+    <link rel="stylesheet" href="../CSS/estilos.css">
+    <script src="https://kit.fontawesome.com/2bc45499a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Power Gym</h1>
-    <h2>Queres, es poder</h2> <hr>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="info.html">¿Quienes Somos?</a></li>
-            <li><a href="#">Disciplinas</a></li>
-            <li><a href="routines.html">Rutinas</a></li>
-            <li><a href="contact.html">Contactanos</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>Power Gym</h1>
+            </div>
+            <nav class="menu">
+                <a href="../index.html">Inicio</a>
+                <a href="info.html">¿Quienes Somos?</a>
+                <a href="pov.html">Disciplinas</a>
+                <a href="routines.html">Rutinas</a>
+                <a href="contact.html">Contacto</a>
+            </nav>
+
+        </div>
+    </header> 
     <section>
-        <h3>Disciplinas</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iste blanditiis at facere libero hic consequuntur, non odio alias, quod doloremque doloribus tenetur vel accusamus voluptatem dolor earum dolorum minima.</p>
-        <img src="/img/calistenia.png" alt="calistenia">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, vitae tempora natus molestiae debitis animi cupiditate, rerum esse alias quae, iusto placeat aliquam doloribus! Soluta quia sapiente rem quos minus.</p>
-        <img src="/img/gim.png" alt="Gimnasio">
-    </section> <hr>
-    <footer>
-        <p>
-            Copy
-            Logo
-            Redes
-        </p>
+        <p class="tituloP">Disciplinas</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente ipsum exercitationem mollitia, molestias quibusdam nesciunt enim reprehenderit dolor voluptate. Facere dolor incidunt maxime! Quis saepe debitis voluptatibus quisquam fuga quos sunt, nobis corrupti ad pariatur consectetur a, inventore magni earum reprehenderit odit alias expedita quia, dignissimos sequi dolores blanditiis beatae temporibus excepturi? Aut sapiente alias officia quos quia? Molestiae fuga nisi officiis quas obcaecati hic consequuntur deleniti dolore magnam! Dolore recusandae hic soluta iste suscipit libero voluptates quam id, commodi illum. Nam omnis enim magnam temporibus illum esse, repudiandae sed, soluta perferendis accusantium pariatur optio? Quibusdam sit aperiam voluptas ipsum quod libero, culpa voluptatum! Cupiditate fuga aperiam consequuntur aut officiis quidem dignissimos in, esse unde nemo, a, libero rerum adipisci.</p>
+        <div class="infoP">
+            <p class="subtitulo1">Calistenia</p>
+            <img src="../img/calistenia.png" alt="calistenia">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis, vel quis assumenda accusantium maxime reiciendis voluptas harum voluptate aspernatur provident sunt eius quos minus voluptatem consectetur nisi rerum consequatur quia ut nemo quibusdam sapiente officia? Nesciunt amet aliquam unde blanditiis iusto deserunt deleniti illum voluptatibus perferendis nisi, officiis eius in cupiditate dignissimos quidem odit ducimus quae laboriosam quas, ipsa porro. Iste facere, quidem eius in recusandae ut sit autem dolor a facilis, labore, repudiandae libero maiores doloremque eligendi odit blanditiis sequi. Magnam et architecto minima, laudantium sed consequatur vitae officia amet accusantium quibusdam dicta ratione. Quasi vitae molestiae consequatur ad ipsam laborum assumenda reiciendis sequi? Recusandae tempore molestias explicabo. Totam harum perferendis eum? Amet tempore placeat fugiat iste omnis. Sint, excepturi culpa? Veniam a impedit voluptatem molestias nam voluptate animi natus laborum ipsum tenetur commodi ipsa accusantium ut earum iusto expedita distinctio hic dolore ad, provident, tempora aliquid. Inventore commodi dicta dolorum explicabo deserunt recusandae provident sequi natus voluptas ratione.</p>
+            <p class="subtitulo2">Gimnasio</p>
+            <img src="../img/gim.png" alt="gim">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse cum velit temporibus suscipit accusantium, aliquid aperiam. Inventore earum recusandae animi asperiores provident porro quas. Molestias mollitia qui praesentium voluptates est, dolores ab blanditiis architecto maxime tempora nostrum optio sapiente laboriosam ipsa ducimus magni, libero aperiam distinctio cupiditate error asperiores ea. Provident voluptates quia, delectus non fuga quidem similique ut. Alias excepturi, voluptas odit amet tenetur libero nostrum nihil! Facere, magnam provident est eum magni maiores qui corporis voluptatibus deserunt doloribus quo inventore. Voluptates repellendus, placeat quibusdam nihil porro eveniet quis voluptatum ut nesciunt fugit? Hic, rerum minima sapiente architecto, beatae culpa laborum obcaecati nisi eaque at dolor id minus! Eos quia sapiente minima ea sunt, consequatur aliquid dignissimos, enim neque illo amet ab quis nemo, error esse quisquam porro hic unde cum tenetur commodi eveniet corporis eaque! Optio ipsum laborum eaque expedita voluptatum dolor, saepe cumque facere exercitationem debitis nesciunt laboriosam enim quos, excepturi distinctio accusamus! Laborum maxime magnam illo quidem nisi amet explicabo illum iure quasi. Quis neque ullam soluta quod ipsa, optio voluptatibus tenetur tempora odit voluptates sapiente ducimus, natus iure provident fugiat earum veniam accusantium magni distinctio.</p>
+        </div>
+    </section>
+    <footer class="piePagina">
+        <div class="grupo1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img class="logoFooter" src="../img/logoprovisional.png" alt="logo provisional">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h2>SOBRE NOSOTROS</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, et.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, et.</p>
+            </div>
+            <div class="box">
+                <h2>SIGUENOS</h2>
+                <div class="redsocial">
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class="fa fa-youtube"></a>
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#"class="fa fa-twitter"></a>
+                </div>
+            </div>
+
+        </div>
+        <div class="grupo2">
+            <small>&copy; 2022 <b>Power Gym</b> - Todos los Derechos Reservados</small>
+
+        </div>
+        
     </footer>
     
 </body>
