--- a/index.html
+++ b/index.html
@@ -5,72 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/estilos.css">
-    <title>Power Gym</title>
+    <title>Power Gym </title>
     <script src="https://kit.fontawesome.com/2bc45499a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <h1>Power Gym</h1>
+    <header>
+        <nav class="menuNavegacion contenedor">
+            <div class="logoG">
+                <img src="img/logoprovisional.png" alt="Logo">
             </div>
-            <nav class="menu">
-                <a href="#">Inicio</a>
-                <a href="pages/info.html">¿Quienes Somos?</a>
-                <a href="pages/pov.html">Disciplinas</a>
-                <a href="pages/routines.html">Rutinas</a>
-                <a href="pages/contact.html">Contacto</a>
-            </nav>
-
-        </div>
-    </header>    
-    <section class="sectionQ">
-        <p>¿Quienes Somos?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus expedita aliquid repellendus dolores. Molestias nam explicabo aliquam facilis voluptatem numquam ex aspernatur possimus dolorem esse quisquam suscipit, velit illum sapiente corrupti officia sequi expedita iure ullam! Dolore, deleniti autem, sapiente ipsum quasi obcaecati sunt saepe officiis, iste consequuntur quod quibusdam laborum eos itaque. Nesciunt nisi facilis inventore, eligendi officiis culpa nihil! Ipsa quasi praesentium obcaecati iure ab, sint magnam autem, quibusdam maiores quam, magni placeat iste ex nulla repellendus neque nesciunt nam. Libero facere aliquam reprehenderit itaque molestiae rem aut nam! Eum voluptate eius expedita, vitae iste nobis autem similique sint quod voluptatibus ipsa blanditiis eos officiis a rem rerum inventore at impedit illo maxime pariatur sed ad enim! Quis, recusandae error? Est optio ipsum nulla ipsam dolores fugit commodi, laborum error expedita? Molestiae aperiam ratione voluptatibus! Saepe non voluptas quam facere. Distinctio possimus nam dicta, debitis reiciendis repudiandae, suscipit repellendus beatae quod expedita enim veniam explicabo ratione. Ipsa, praesentium! Laboriosam architecto amet assumenda quae sed odio aut id cupiditate nihil illum animi, necessitatibus, quos vero minus dolorem optio eaque ab pariatur, ducimus quia. Debitis corporis vitae error, alias eaque repellat voluptatem magni cum neque illo temporibus quia hic. Quam explicabo odit maxime, sequi soluta cupiditate eius, temporibus aliquam deserunt quidem inventore voluptas. Cumque minus blanditiis maiores adipisci sed quae ipsum sit ut nobis, esse nisi molestias tenetur perspiciatis exercitationem doloremque sequi rem quisquam dicta praesentium. Perspiciatis nemo, reiciendis beatae, ipsum placeat explicabo saepe nam facere adipisci ex sit eligendi in molestiae magnam molestias fugiat inventore dicta mollitia velit debitis! Dolore, minima mollitia deleniti quasi neque odio omnis cumque animi, laborum veritatis, in sapiente. Magni nulla ratione deleniti rerum laudantium tenetur beatae officiis numquam error ullam! Sequi repellat labore modi consectetur vel nemo tenetur, temporibus, qui in eaque reprehenderit eos!</p>
-    </section>
-    <section class="sectionD">
-        <p>Disciplinas</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, doloribus repellat! Quod, voluptate accusamus. Dolorem nemo magni illo, pariatur dignissimos, libero excepturi, consectetur voluptas distinctio blanditiis reprehenderit voluptates sapiente deserunt? Natus praesentium quibusdam maxime est adipisci mollitia tempora delectus ab aspernatur facilis harum numquam, impedit odit sed ut dicta recusandae nemo repellat cupiditate placeat nobis velit ullam qui corporis. Possimus illo quod fuga ex illum quas hic, ut reprehenderit aliquam, eius tempore porro dolore et alias doloribus totam dignissimos similique deleniti dolorem veritatis impedit aspernatur? Molestiae unde, expedita magnam veniam distinctio sunt nihil maxime ipsa amet nostrum laudantium doloribus vitae assumenda? Vel numquam similique, dolor consequatur aut deserunt laudantium sunt iusto sapiente quisquam nisi cum magni eaque reiciendis deleniti quibusdam, ipsa eveniet iure suscipit repellendus molestiae laboriosam porro tempore totam? Ex ad, repellat incidunt harum reprehenderit dolorem accusamus cupiditate veniam aut sint illo? Corporis ducimus error, eum ex porro cupiditate odit natus tempore molestiae et consequatur, possimus accusamus. Aspernatur odio autem obcaecati eos alias cupiditate rem nam, voluptate, officia quia explicabo recusandae tempora quos laboriosam voluptatem nulla sed molestiae facere quibusdam quod hic placeat beatae illum repellat? Quaerat recusandae ex voluptatem dignissimos voluptate doloremque! Facilis tenetur incidunt quidem dolores numquam vero, repellendus distinctio sequi placeat cupiditate, blanditiis quisquam eaque eius tempora provident dolor beatae rerum explicabo? Iste iure officia quam dolores porro! Ex aut sed quis pariatur eveniet quam, nisi ipsam velit consequatur dolorem placeat dicta voluptatibus repellat explicabo corporis neque quidem perspiciatis dignissimos deserunt! Beatae, praesentium corrupti in modi sapiente iusto est saepe tempora doloremque aperiam, ratione dicta qui accusamus deserunt animi porro quas esse odio! Earum neque quod tenetur harum voluptatem sed vero provident. Repudiandae fuga aperiam ipsum quibusdam, itaque mollitia asperiores non dolor soluta, eos, id odio quo quas quasi? Ex deserunt ratione omnis adipisci voluptatem debitis?</p>
-    </section>
-    <section class="sectionR">
-        <p>Rutinas</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut tempora porro amet quas. Quasi mollitia delectus amet minus, commodi facilis officia magnam, eveniet consequuntur voluptate velit tempore? Mollitia minima cumque perferendis commodi autem dolorem ex ipsam, assumenda vitae, quis natus. Hic asperiores nulla ducimus minus quisquam voluptatum commodi! Quidem tenetur repudiandae, veritatis dolores dolorem magni asperiores dolorum libero, facere, quis iusto optio doloremque beatae esse. Commodi magni consectetur veniam eius consequatur perspiciatis quia! Exercitationem hic rem cum suscipit enim, vitae maxime itaque ut adipisci qui officia culpa blanditiis harum molestias, excepturi iusto necessitatibus ducimus ullam velit at neque libero omnis. Ad nemo rerum facilis. Soluta veritatis aliquam excepturi beatae non quia tenetur vel quisquam. Ab quaerat perspiciatis iure! Ratione, dignissimos dolore. Mollitia quis iste ea voluptatum, minus eaque at saepe, voluptates similique dolor ratione explicabo voluptate modi deleniti consectetur eos aliquid odit repellendus deserunt doloribus itaque quaerat cum? Molestias repellat, reprehenderit voluptatem excepturi, voluptas dolores a mollitia itaque ipsa praesentium perferendis accusantium. Doloribus voluptas eligendi tempore error tenetur quod minus nihil asperiores! Doloremque, quasi? Veniam totam qui nostrum. Veniam, quibusdam incidunt. Cum voluptas vitae doloribus eligendi autem, explicabo ipsa saepe facere laboriosam dolorem voluptate dolore dolorum voluptatem mollitia nemo ipsam molestias asperiores veniam sit corporis. Est iure sequi laudantium ipsam odit, blanditiis ipsa quisquam maiores molestias. Rem eaque nisi neque modi temporibus vero consectetur culpa, quas magnam iure, commodi eum quis deserunt, quam tempore vitae qui eligendi quibusdam nobis laudantium aliquid iste enim esse consequatur. Iusto facilis commodi porro cumque vero cum provident reprehenderit soluta modi ratione reiciendis sint adipisci, omnis neque suscipit optio eligendi dolorem tempore debitis voluptatum? Sequi rerum, non ad nam architecto, vitae inventore quae quos error itaque recusandae quam! Dignissimos minus quisquam culpa! Est quo excepturi modi, ad voluptatum sit distinctio aut quas voluptatem minus, tempore fugit minima corrupti, iste atque alias perspiciatis laboriosam autem commodi ea! Nostrum nobis quos labore magnam, totam vitae laudantium distinctio dignissimos, rem deleniti nisi, velit ipsa. Nam eaque beatae, nihil tempora quod facere temporibus reprehenderit nemo magni commodi necessitatibus dolor vitae natus sequi sunt magnam inventore sit suscipit excepturi. Cupiditate sunt, quod est mollitia deleniti odio vel. Nesciunt sed alias, iste quaerat nihil qui architecto, officia aliquid hic ratione aperiam incidunt tempora porro, rerum totam debitis fugiat? Rerum at assumenda quisquam. Numquam, incidunt aspernatur exercitationem aut nobis dolorum doloremque maiores atque magni tempora cumque consequatur earum placeat, nisi vitae omnis. Culpa quas corrupti possimus, nam natus sunt cumque nihil excepturi? Doloremque quis dicta aperiam laborum itaque consequatur! Fuga soluta quaerat illo eum quidem voluptatibus alias impedit quae quisquam asperiores perferendis dolore, omnis iusto fugiat. Illo, voluptates illum! Ex, impedit? Incidunt enim expedita rem molestiae, eum pariatur consectetur molestias necessitatibus sequi quaerat! Dignissimos error aspernatur, eveniet qui ipsum doloribus quas nam facilis sed numquam necessitatibus adipisci nostrum pariatur beatae quo eos laborum iste repellat ex? Consequatur ipsum nulla sit quas. Vitae deserunt saepe illum debitis fugit mollitia omnis asperiores nesciunt itaque deleniti iusto dicta optio eligendi et hic, eaque adipisci corporis!</p>
-    </section>
-    <section class="sectionC">
-        <p>Contacto</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt facere enim praesentium eos! Reprehenderit alias quis iste, voluptatum suscipit voluptatibus rerum repellat adipisci dolorem rem fugiat tempora asperiores ad, est, dignissimos unde qui expedita explicabo perferendis maiores iusto aspernatur? Placeat voluptates ratione qui aperiam nulla. Sequi explicabo quo nemo eos blanditiis culpa? Minus nemo quis nostrum recusandae dolorem adipisci hic impedit illum tenetur, incidunt voluptates, soluta suscipit totam? Tempora ratione enim quia! Eaque ea ratione, labore qui quidem unde culpa deserunt autem corrupti iusto perferendis fuga quam rem quibusdam fugiat laborum neque quia, veritatis ex harum? Impedit, voluptatum beatae? Architecto deserunt veritatis, eaque repellendus qui dicta esse officiis maiores pariatur ipsam earum quisquam quas porro, ex eligendi in optio aliquid laudantium quasi? Ipsam unde a rem odit quos esse adipisci explicabo facere cupiditate eveniet dolor non neque similique sint temporibus, accusantium accusamus enim officia illo nam quisquam beatae qui incidunt! Necessitatibus, est? Cum quas omnis fuga tempore molestiae voluptas quisquam unde cumque! Tenetur, recusandae enim commodi totam sed incidunt eum dolore deleniti, molestias dignissimos nisi asperiores itaque ducimus sit amet cumque laudantium ab delectus necessitatibus vero. Fugit itaque veniam aliquid laudantium perspiciatis quia nam eius nisi at fugiat quas autem natus praesentium minima aut rerum, molestias soluta ipsum tempora accusantium doloremque. Natus facilis perspiciatis deleniti dolor a, corporis assumenda odit praesentium neque deserunt. Autem unde eius blanditiis repudiandae minima impedit recusandae vitae neque placeat tempore eos sit, nisi possimus dolorum illum, accusantium sequi, expedita esse fugit assumenda inventore! Aut porro sapiente fugiat dolorem. Quam quo libero fuga debitis hic! Impedit odit doloremque, aut voluptatibus quisquam quis ea maiores quia ipsam deleniti. Nihil, consectetur! Quisquam, perferendis doloremque soluta, ab eveniet cumque distinctio sint tenetur similique sit amet blanditiis reiciendis, ullam accusamus quod suscipit error sapiente facilis atque expedita omnis. Esse, consequuntur.</p>
-    </section>
-    <footer class="piePagina">
-        <div class="grupo1">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img class="logoFooter" src="img/logoprovisional.png" alt="logo provisional">
-                    </a>
-                </figure>
+            <div class="enlaces">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="pages/info.html">¿Quienes Somos?</a></li>
+                <li><a href="pages/pov.html">Disciplinas</a></li>
+                <li><a href="pages/routines.html">Rutinas</a></li>
+                <li><a href="pages/contact.html">Contacto</a></li>
             </div>
-            <div class="box">
-                <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, et.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, et.</p>
+        </nav>
+        <section class="hero">
+            <div class="contenedorTextos contenedor">
+                <h1>Las paginas con GRID y FLEXBOX son INICIO y QUIENES SOMOS</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda accusamus quo perspiciatis aperiam unde tempore quod veniam delectus quidem vel amet error deleniti adipisci laudantium hic quasi, facere eligendi nesciunt.</p>
             </div>
-            <div class="box">
-                <h2>SIGUENOS</h2>
-                <div class="redsocial">
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#"class="fa fa-twitter"></a>
-                </div>
-            </div>
-
-        </div>
-        <div class="grupo2">
-            <small>&copy; 2022 <b>Power Gym</b> - Todos los Derechos Reservados</small>
-
-        </div>
-        
-    </footer>
-    
+        </section>
+    </header>
 </body>
 </html>
