Crear repositorio en github

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +9,20 @@
     <script src="https://kit.fontawesome.com/2bc45499a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <h1>Power Gym</h1>
+    <header>
+        <nav class="menuNavegacion contenedor">
+            <div class="logoG">
+                <img src="../img/logoprovisional.png" alt="Logo">
             </div>
-            <nav class="menu">
-                <a href="../index.html">Inicio</a>
-                <a href="info.html">¿Quienes Somos?</a>
-                <a href="pov.html">Disciplinas</a>
-                <a href="routines.html">Rutinas</a>
-                <a href="contact.html">Contacto</a>
-            </nav>
-
-        </div>
-    </header> 
+            <div class="enlaces">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="info.html">¿Quienes Somos?</a></li>
+                <li><a href="pov.html">Disciplinas</a></li>
+                <li><a href="routines.html">Rutinas</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </div>
+        </nav>
+    </header>
     <section>
         <p class="tituloC">Contactos</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa dignissimos facere beatae maiores rerum accusantium pariatur laboriosam, suscipit dolores quidem dolorum dolorem nesciunt delectus nam consequuntur praesentium illum hic necessitatibus.</p>
