--- a/pages/pov.html
+++ b/pages/pov.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +9,20 @@
     <script src="https://kit.fontawesome.com/2bc45499a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <h1>Power Gym</h1>
+    <header>
+        <nav class="menuNavegacion contenedor">
+            <div class="logoG">
+                <img src="../img/logoprovisional.png" alt="Logo">
             </div>
-            <nav class="menu">
-                <a href="../index.html">Inicio</a>
-                <a href="info.html">¿Quienes Somos?</a>
-                <a href="pov.html">Disciplinas</a>
-                <a href="routines.html">Rutinas</a>
-                <a href="contact.html">Contacto</a>
-            </nav>
-
-        </div>
-    </header> 
+            <div class="enlaces">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="info.html">¿Quienes Somos?</a></li>
+                <li><a href="pov.html">Disciplinas</a></li>
+                <li><a href="routines.html">Rutinas</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </div>
+        </nav>
+    </header>
     <section>
         <p class="tituloP">Disciplinas</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente ipsum exercitationem mollitia, molestias quibusdam nesciunt enim reprehenderit dolor voluptate. Facere dolor incidunt maxime! Quis saepe debitis voluptatibus quisquam fuga quos sunt, nobis corrupti ad pariatur consectetur a, inventore magni earum reprehenderit odit alias expedita quia, dignissimos sequi dolores blanditiis beatae temporibus excepturi? Aut sapiente alias officia quos quia? Molestiae fuga nisi officiis quas obcaecati hic consequuntur deleniti dolore magnam! Dolore recusandae hic soluta iste suscipit libero voluptates quam id, commodi illum. Nam omnis enim magnam temporibus illum esse, repudiandae sed, soluta perferendis accusantium pariatur optio? Quibusdam sit aperiam voluptas ipsum quod libero, culpa voluptatum! Cupiditate fuga aperiam consequuntur aut officiis quidem dignissimos in, esse unde nemo, a, libero rerum adipisci.</p>
