--- a/pages/routines.html
+++ b/pages/routines.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +9,20 @@
     <script src="https://kit.fontawesome.com/2bc45499a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <h1>Power Gym</h1>
+    <header>
+        <nav class="menuNavegacion contenedor">
+            <div class="logoG">
+                <img src="../img/logoprovisional.png" alt="Logo">
             </div>
-            <nav class="menu">
-                <a href="../index.html">Inicio</a>
-                <a href="info.html">¿Quienes Somos?</a>
-                <a href="pov.html">Disciplinas</a>
-                <a href="routines.html">Rutinas</a>
-                <a href="contact.html">Contacto</a>
-            </nav>
-
-        </div>
-    </header> 
+            <div class="enlaces">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="info.html">¿Quienes Somos?</a></li>
+                <li><a href="pov.html">Disciplinas</a></li>
+                <li><a href="routines.html">Rutinas</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </div>
+        </nav>
+    </header>
     <section>
         <p class="tituloR">Rutinas</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum consequuntur id mollitia ipsum non dolore quisquam quam distinctio magnam debitis magni ullam commodi accusamus nemo, minima blanditiis rerum vel eligendi quia illum beatae optio officia in ducimus? Distinctio eaque inventore ex, quam vel adipisci blanditiis nisi dicta nostrum, similique deserunt cupiditate, officiis possimus in alias repellendus voluptatibus obcaecati explicabo? Laborum dolor obcaecati, aperiam adipisci dolorum unde fugiat culpa nihil officia sequi minus labore dolores rerum beatae, quibusdam quo officiis architecto facere a, vero quos accusamus aspernatur hic. Quas velit saepe unde voluptates non quaerat eveniet adipisci quibusdam nostrum sapiente! Saepe cum impedit hic numquam asperiores architecto facilis, deleniti quisquam fugit voluptate. Exercitationem laborum, ea deserunt voluptatem mollitia odio sequi incidunt nostrum ad eaque autem, veritatis et ex, deleniti omnis. Asperiores autem obcaecati non soluta illo possimus doloremque iure eum! Ea amet voluptatibus ratione distinctio dignissimos! Eaque, ullam recusandae nobis impedit quasi, amet quis laboriosam tempore aspernatur pariatur corporis suscipit? Nisi nostrum fugiat ducimus consequuntur doloribus quidem consectetur excepturi doloremque error fuga animi architecto magnam corporis alias, repellendus distinctio assumenda odio soluta maxime molestias dicta asperiores voluptates necessitatibus perferendis. Pariatur magni doloribus et eos similique ad sed maxime soluta voluptas iusto.</p>
