--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                           <a class="nav-link lead text-light" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link lead text-light" href="#">Rutinas</a>
+                            <a class="nav-link lead text-light" href="pages/routines.html">Rutinas</a>
                           </li>
                         <li class="nav-item">
-                            <a class="nav-link lead text-light" href="#">Calistenia</a>
+                            <a class="nav-link lead text-light" href="pages/calisthenics.html">Calistenia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link lead text-light" href="#">Gimnasio</a>
+                            <a class="nav-link lead text-light" href="pages/gym.html">Gimnasio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link lead text-light" href="pages/info.html">Nosotros</a>
@@ -65,11 +65,11 @@
                   <div class="container align-self-centern px-5">
                       <h1 class="text-uppercase font-weight-bold mb-4">Querer es poder, Eso es Power Gym</h1>
                       <p class="lead-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, accusamus.</p>
-                      <a href="#" class="btn btn-primary">Empieza Ahora</a>
+                      <a href="pages/routines.html" class="btn btn-primary">Empieza Ahora</a>
                   </div>
               </div>
               <div class="col-lg-7">
-                  <img src="img/rutinas.png" alt="imagenprovisional" class="img-fluid">
+                  <img class="img-home-provisional  " src="img/home.jpg" alt="imagenprovisional" class="img-fluid">
               </div>
           </div>
       </section>
