--- a/pages/calisthenics.html
+++ b/pages/calisthenics.html
@@ -14,14 +14,6 @@
   </head>
   <body>
       <section>
-        <div class="row no-gutters">
-          <div class="col-lg-1 border-right d-none d-lg-block">
-              <div class="d-flex h-100">
-                  <div class="align-self-center mx-auto">
-                    <i class="fa-solid fa-magnifying-glass lead"></i>
-                  </div>  
-              </div>
-          </div>
           <div class="col-lg-11">
             <nav class="navbar navbar-expand-lg text-light">
                 <a class="navbar-brand text-light lead-xl" href="#">Power <span class="font-weight-bold">Gym</span></a>
@@ -35,48 +27,119 @@
                       <a class="nav-link lead text-light" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link lead text-light" href="routines.html">Rutinas</a>
+                        <a class="nav-link lead text-light" href="#">Rutinas</a>
                       </li>
                     <li class="nav-item">
                         <a class="nav-link lead text-light" href="calisthenics.html">Calistenia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link lead text-light" href="gym.html">Gimnasio</a>
+                        <a class="nav-link lead text-light" href="#">Gimnasio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link lead text-light" href="info.html">Nosotros</a>
+                        <a class="nav-link lead text-light" href="#">Nosotros</a>
                     </li>
                   </ul>
                 </div>
               </nav>
           </div>
       </div>
-      <div class="row no-gutters">
-          <div class="col-lg-1 d-none d-lg-block border-right">
-              <div class="d-flex">
-                  <ul class="list-unstyled align-self-center mx-auto">
-                      <li class="sideways"><a href="#" class="text-light">Instagram</a></li>
-                      <li class="sideways"><a href="#" class="text-light">Youtube</a></li>
-                      <li class="sideways"><a href="#" class="text-light">Facebook</a></li>
-                  </ul>
-              </div>
-          </div>
-    <div>
       <div class="container align-self-centern px-5">
         <h1 class="text-uppercase font-weight-bold mb-4">Calistenia</h1>
         <p class="lead-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, accusamus.</p>
     </div>
-    <div class="shadow-sm p-3 mb-5 rounded">
-      <h2 class="text-uppercase lead-xl animacion-shadows">¿Que es la calistenia?</h2>
-    </div>
-    <div class="shadow-sm p-3 mb-5 rounded">
-      <h2 class="text-uppercase lead-xl animacion-shadows">Primeros Pasos</h2>
-    </div>
-    <div class="shadow-sm p-3 mb-5 rounded">
-      <h2 class="text-uppercase lead-xl animacion-shadows">Rutinas</h2>
-    </div>
+    <div class="accordion" id="accordionPower">
+      <div class="card btn-calis text-light">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-light text-left collapsed lead-xl" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+              ¿Que es la Calistenia?
+            </button>
+          </h2>
+        </div>
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionPower">
+          <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae minus voluptate laborum. Voluptatibus unde rem incidunt quis nam doloribus tempora nostrum! Itaque laboriosam ea ex non magni, tenetur laborum ipsam placeat dolore ullam reprehenderit ut harum officia. Pariatur, provident ad sed commodi distinctio nulla dignissimos vitae excepturi quia reprehenderit harum obcaecati corporis ex accusamus magni voluptas velit quas aspernatur eligendi, quaerat eius soluta. Odio odit nulla perspiciatis debitis, quia minima suscipit magni delectus veritatis eligendi! Repellendus eos magni quos ratione, enim ad commodi, laboriosam earum necessitatibus, dolores officia dolorem nostrum modi! Omnis, veniam provident ducimus ratione fugit maiores animi.
+          </div>
+        </div>
+      </div>
+      <div class="card btn-calis text-light">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-light text-left collapsed lead-xl" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Primeros Pasos
+            </button>
+          </h2>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionPower">
+          <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium vitae minus voluptate laborum. Voluptatibus unde rem incidunt quis nam doloribus tempora nostrum! Itaque laboriosam ea ex non magni, tenetur laborum ipsam placeat dolore ullam reprehenderit ut harum officia. Pariatur, provident ad sed commodi distinctio nulla dignissimos vitae excepturi quia reprehenderit harum obcaecati corporis ex accusamus magni voluptas velit quas aspernatur eligendi, quaerat eius soluta. Odio odit nulla perspiciatis debitis, quia minima suscipit magni delectus veritatis eligendi! Repellendus eos magni quos ratione, enim ad commodi, laboriosam earum necessitatibus, dolores officia dolorem nostrum modi! Omnis, veniam provident ducimus ratione fugit maiores animi.
+            <div>
+              <a href="#" class="btn btn-routines">Rutina Para Empezar</a>
+              <a href="#" class="btn btn-routines">Rutina Principiantes</a>
+              <a href="#" class="btn btn-routines">Rutina Media</a>
+              <a href="#" class="btn btn-routines">Rutina Avanzada</a>
+            </div>
+            <div>
+              Si completaste todas las rutinas o ya las consideras sencillas, en el apartado de RUTINAS, tendras mas!
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card btn-calis text-light">
+        <div class="card-header" id="headingThree">
+          <h2 class="mb-0">
+            <button class="btn btn-link btn-block text-light text-left collapsed lead-xl" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Rutinas
+            </button>
+          </h2>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionPower">
+          <div class="card-body">
+            <div>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, consequuntur.</p><a href="#" class="btn btn-routines">Rutina Primer Muscle Up</a>
+            </div>
+            <div>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, consequuntur.</p><a href="#" class="btn btn-routines">Rutina de L-Sit</a>
+            </div>
+            <div>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde, consequuntur.</p><a href="#" class="btn btn-routines">Rutina Full Body</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
       </section>
+      <footer class="text-center text-white footer-color">
+        <div class="container pt-4">
+          <section class="mb-4">
+            <a
+              class="btn btn-link btn-floating btn-lg text-dark m-1"
+              href="#!"
+              role="button"
+              data-mdb-ripple-color="dark"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              class="btn btn-link btn-floating btn-lg text-dark m-1"
+              href="#!"
+              role="button"
+              data-mdb-ripple-color="dark"
+              ><i class="fab fa-youtube"></i
+            ></a>
+            <a
+              class="btn btn-link btn-floating btn-lg text-dark m-1"
+              href="#!"
+              role="button"
+              data-mdb-ripple-color="dark"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </section>
+        </div>
+        <div class="text-center text-dark p-3 copyright">
+          © 2020 Copyright:
+          <a class="text-dark" href="../index.html">Powergym.com</a>
+        </div>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
